# parity-ui

./: .editorconfig  .eslintrc  .eslintrc.json  .gitignore  .gitmodules  .npmignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  UNITS.md  build.rs  build.sh  build_lib.sh  build_webapp.sh  index.js  install.sh  nightwatch.conf.js  nightwatch.json  package.json  web.sh  webpack.config.js  webpackBuildToSignerPlugin.js
dapps/: Cargo.toml  README.md
dapps/src/: build.rs  codegen.rs  js.rs  lib.rs.in
home/: Cargo.toml  README.md  README.ui.md  build.rs  build_webapp.sh  package.json
home/client/: index.html  transfer.js
home/client/components/Account/: Account.css  Account.js
home/client/components/AccountsChooser/: AccountsChooser.js
home/client/components/AccountsDetails/: AccountsDetails.css  AccountsDetails.js  index.js
home/client/components/CreateAccount/: CreateAccount.css  validations.data.js
home/client/components/DappNav/: DappNav.css  DappNav.js
home/client/components/ExtensionLink/: ExtensionLink.js  styles.css
home/client/components/StatusLine/: StatusLine.css  index.js
home/client/components/Storage/: Storage.js  cols.data.js  cols.js  eth-wallet-compat.js  safeLocalStorage.js
home/client/components/SubdomainDialog/: SubdomainDialog.js
home/client/components/Toast/: Toast.css
home/client/components/TopBar/: TopBar.js  index.js
home/client/components/TransactionConfirmation/: TransactionConfirmation.js
home/client/components/Web3Component/: Web3Component.js
home/scripts/: check-master.sh
home/src/: lib.rs.in
home/src/web/: cols.frame.html  cols.frame.js  error_pages.html  error_pages.js  home.js  index.html  inject.js  styles.css
home/web/: npm-shrinkwrap.json  package.json  webpack.config.js
home/web/client/: cols.frame.js  error_pages.css  error_pages.html  error_pages.js  home.js  index.html  index.spec.js  inject.js  style.css  transfer.js
home/web/client/actions/: app.js  dapps.js  dom.js  extension.js  firstRun.js  rpc.js  signer.js
home/web/client/components/: web3.extensions.js
home/web/client/components/Account/: Account.js
home/web/client/components/AccountsChooser/: AccountChooser.css  AccountsChooser.js
home/web/client/components/AccountsDetails/: AccountsDetails.js
home/web/client/constants/: rpc.js
home/web/client/middlewares/: dapps.js  firstRun.js  middlewares.js  rpc.js  storage.js  window.js
home/web/client/providers/: dom.js  extension.js  interceptor.js  rpc.js
home/web/client/reducers/: dapps.js  dom.js  extension.js  firstRun.js  options.js  pendingTransaction.js  reducers.js  rpc.js
home/web/client/store/: configureStore.js
home/web/client/utils/: Interceptor.js  accounts.js  appLink.js  extension.js  proxy.js  signer.js  window.js
signer/: .istanbul.yml  .npmignore  Cargo.toml  README.md  build.rs  package.json
signer/app/: index.css
signer/app/components/Header/: Header.css
signer/app/components/ParityNotRunning/: index.js
signer/app/components/ToastrContainer/: ToastrContainer.js
signer/app/components/Transactions/: Transactions.css  Transactions.js
signer/app/containers/LoadingPage/: LoadingPage.js
signer/app/containers/Root/: Root.js
signer/app/middlewares/: middlewares.js  ws.js
signer/app/providers/: appProvider.js  web3WebsocketProvider.js
signer/app/reducers/: app.js  reducers.js  ws.js
signer/app/store/: configureStore.js
signer/app/utils/: parity.js
signer/src/: lib.rs  lib.rs.in
signer/src/web/: app.js  index.js
signer/test/: mocha.opts
signer/web/: .npmignore  npm-shrinkwrap.json  package.json  webpack.config.js
signer/web/app/: app.dev.js  app.js  index.dev.js  index.html
signer/web/src/: app.dev.js  app.js  index.js
signer/web/src/actions/: app.js  proxy.js  transactions.js  ws.js
signer/web/src/middlewares/: app.js  toastr.spec.js  ws.js
signer/web/src/providers/: appProvider.js  web3WebsocketProvider.js  wsProvider.js
signer/web/src/reducers/: app.js  index.js  parity.js  proxy.js  reducers.js  requests.js  transactions.js  ws.js
signer/web/src/routes/: routes.js
signer/web/src/utils/: Ws.js
status/: .gitignore  .istanbul.yml  Cargo.toml  README.md  build.rs  build_webapp.sh  package.json
status/client/components-compositors/Animated/: Animated.js
status/client/components/AutoComplete/: AutoComplete.js
status/client/components/Box/: Box.spec.js
status/client/components/Call/: Call.js
status/client/components/CallsToolbar/: CallsToolbar.js
status/client/components/Debug/: Debug.js
status/client/components/Header/: Header.js
status/client/components/MiningSettings/: MiningSettings.js
status/client/components/Response/: Response.spec.js
status/client/components/RpcCalls/: RpcCalls.js
status/client/components/ScrollTopButton/: ScrollTopButton.js
status/client/components/Status/: Status.js
status/client/components/ToastrContainer/: ToastrContainer.js
status/client/components/Value/: Value.js
status/client/containers/App/: App.js
status/client/containers/RpcPage/: RpcPage.js
status/client/provider/: web3-ethcore-provider.js  web3-provider.spec.js
status/client/util/: index.spec.js
status/rpc-docs/: add-formatters.js  index.js
status/src/: lib.rs.in
status/src/web/: index.js
status/test/: apply-babel.js  utils.js
status/test/e2e/: app-container.js
status/web/: README.md  nightwatch.json  npm-shrinkwrap.json  package.json  webpack.config.js
status/web/client/: index.js
status/web/client/actions/: status.js
status/web/client/env-specific/: index.js
status/web/client/middleware/: localstorage.js  user-web3-interactions.spec.js
status/web/client/provider/: web3-provider.js
status/web/client/reducers/: reducers.js  status.js
status/web/rpc-docs/: custom-functions.js  docs.md
status/web/test/: mocked-responses.json
status/web/test/e2e/: app-container.js  rpc-page.js  status-page.js
wallet/: .gitignore  Cargo.toml  README.md  build.rs  build.sh
wallet/src/: lib.rs.in
wallet/src/web/: index.html
(+574 files in other folders)
