[package]
description = "Ethereum Wallet Ðapp for Parity"
name = "parity-dapps-wallet"
version = "0.6.1"
license = "GPL-3.0"
authors = ["Alexander Van de Sande <alex.vandesande@ethdev.com>", "Fabian Vogelsteller <fabian.vogelsteller@gmail.com>"]
build = "build.rs"

[features]
default = ["with-syntex"]
with-syntex = ["parity-dapps/with-syntex"]

[build-dependencies]
parity-dapps = { git = "https://github.com/ethcore/parity-dapps-rs.git", version = "0.3" }

[dependencies]
parity-dapps = { git = "https://github.com/ethcore/parity-dapps-rs.git", version = "0.3" }

