[package]
name = "parity-dapps-signer"
version = "0.6.0"
license = "GPL-3.0"
authors = ["Ethcore <admin@ethcore.io>"]
build = "build.rs"

[features]
# default = ["dev"]
default = ["parity-dapps/with-syntex", "parity-dapps/use-precompiled-js"]
dev = []

[build-dependencies]
parity-dapps = { path = "../dapps" }

[dependencies]
parity-dapps = { path = "../dapps" }
