[package]
name = "parity-dapps-signer"
version = "0.2.0"
license = "GPL-3.0"
authors = ["Ethcore <admin@ethcore.io>"]
build = "build.rs"

[features]
# default = ["dev"]
default = ["with-syntex"]
dev = []
with-syntex = ["parity-dapps/with-syntex"]

[build-dependencies]
parity-dapps = { path = "../dapps" }

[dependencies]
parity-dapps = { path = "../dapps" }
