[package]
description = "Status Page for Parity"
name = "parity-dapps-status"
version = "0.6.0"
license = "GPL-3.0"
authors = ["Ethcore <admin@ethcore.io>"]
build = "build.rs"

[features]
default = ["parity-dapps/with-syntex", "parity-dapps/use-precompiled-js"]

[build-dependencies]
parity-dapps = { path = "../dapps" }

[dependencies]
parity-dapps = { path = "../dapps" }

