[package]
description = "Ethereum Wallet Ðapp for Parity"
name = "parity-dapps-wallet"
version = "0.6.0"
license = "GPL-3.0"
authors = ["Alexander Van de Sande <alex.vandesande@ethdev.com>", "Fabian Vogelsteller <fabian.vogelsteller@gmail.com>"]
build = "build.rs"

[features]
default = ["with-syntex"]
use-precompiled-js = ["parity-dapps/use-precompiled-js"]
with-syntex = ["parity-dapps/with-syntex"]

[build-dependencies]
parity-dapps = { path = "../dapps" }

[dependencies]
parity-dapps = { path = "../dapps" }

